test/integration/httproute/manifests/backend-crd/basic/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-backend-cr-basic
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: http-echo
      port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gate.v3.haproxy.org
          kind: Backend
          name: backend-cr-1
